# falcon-auto-swagger

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
falcon_auto_swagger/: __init__.py  schema.py  swagger.py  typed_dict_utils.py  utils.py
tests/: swagger_test.py  typed_dict_utils_test.py
tests/schemas/: req_schema.json  resp_schema.json
