[metadata]
name = setup.cfg
version = 0.1.0
author = Davide Canton
author-email = davide.canton5@gmail.com
summary = Falcon extension for Swagger
# home-page = http://pypi.python.org/pypi/setup.cfg
requires-dist = setuptools
long_description = file: README.rst
license = BSD 3-Clause License
classifiers =
    Framework :: Falcon
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    falcon>=3.0.0

[options.extras_require]
dev =
    pytest>=7.0.0
    black>=23.0.0
    ruff>=0.0.259
    waitress>=2.1.2
    jsonschema>=4.17.3

[options.packages.find]
exclude =
    tests*